...
 */
enum class CardBrand(
    val type: String,
    @DrawableRes val icon: Int,
    private val prefixes: Set<String> = emptySet()
) {
    Visa(
        "visa",
        R.drawable.airwallex_ic_visa,
        prefixes = setOf("4")
    ),
    MasterCard(
        "mastercard",
...
